// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lingui/babel-plugin-extract-messages should extract Plural messages from JSX files when there's no Trans tag (integration) 1`] = `
Object {
  {count, plural, one {# book} other {# books}}: Object {
    extractedComments: Array [],
    id: {count, plural, one {# book} other {# books}},
    origin: Array [
      Array [
        jsx-without-trans.js,
        3,
      ],
    ],
  },
}
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JS files (macros) 1`] = `
Object {
  Description: Object {
    extractedComments: Array [
      description,
    ],
    id: Description,
    origin: Array [
      Array [
        js-with-macros.js,
        7,
      ],
    ],
  },
  ID: Object {
    extractedComments: Array [],
    id: ID,
    message: Message with id,
    origin: Array [
      Array [
        js-with-macros.js,
        12,
      ],
    ],
  },
  ID Some: Object {
    extractedComments: Array [],
    id: ID Some,
    message: Message with id some,
    origin: Array [
      Array [
        js-with-macros.js,
        19,
      ],
    ],
  },
  Message: Object {
    extractedComments: Array [],
    id: Message,
    origin: Array [
      Array [
        js-with-macros.js,
        3,
      ],
      Array [
        js-with-macros.js,
        5,
      ],
    ],
  },
  Values {param}: Object {
    extractedComments: Array [],
    id: Values {param},
    origin: Array [
      Array [
        js-with-macros.js,
        17,
      ],
    ],
  },
}
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JS files 1`] = `
Object {
  Description: Object {
    extractedComments: Array [
      description,
    ],
    id: Description,
    origin: Array [
      Array [
        js-without-macros.js,
        5,
      ],
    ],
  },
  ID: Object {
    extractedComments: Array [],
    id: ID,
    message: Message with id,
    origin: Array [
      Array [
        js-without-macros.js,
        7,
      ],
    ],
  },
  Message: Object {
    extractedComments: Array [],
    id: Message,
    origin: Array [
      Array [
        js-without-macros.js,
        3,
      ],
    ],
  },
  Values {param}: Object {
    extractedComments: Array [],
    id: Values {param},
    origin: Array [
      Array [
        js-without-macros.js,
        9,
      ],
    ],
  },
}
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JSX files (macros) 1`] = `
Object {
  Hi, my name is {name}: Object {
    extractedComments: Array [],
    id: Hi, my name is {name},
    origin: Array [
      Array [
        jsx-with-macros.js,
        3,
      ],
    ],
  },
  Title: Object {
    extractedComments: Array [],
    id: Title,
    origin: Array [
      Array [
        jsx-with-macros.js,
        4,
      ],
    ],
  },
  {count, plural, one {# book} other {# books}}: Object {
    extractedComments: Array [],
    id: {count, plural, one {# book} other {# books}},
    origin: Array [
      Array [
        jsx-with-macros.js,
        6,
      ],
    ],
  },
}
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JSX files 1`] = `
Object {
  Hi, my name is <0>{name}</0>: Object {
    extractedComments: Array [],
    id: Hi, my name is <0>{name}</0>,
    origin: Array [
      Array [
        jsx-without-macros.js,
        9,
      ],
    ],
  },
  msg.default: Object {
    extractedComments: Array [],
    id: msg.default,
    message: Hello World,
    origin: Array [
      Array [
        jsx-without-macros.js,
        7,
      ],
      Array [
        jsx-without-macros.js,
        8,
      ],
    ],
  },
  msg.hello: Object {
    extractedComments: Array [
      Description,
    ],
    id: msg.hello,
    origin: Array [
      Array [
        jsx-without-macros.js,
        6,
      ],
    ],
  },
}
`;

exports[`@lingui/babel-plugin-extract-messages should extract uniq translations based on context 1`] = `
Object {
  msggoodbye: Object {
    context: goodbye,
    extractedComments: Array [],
    id: msg,
    message: Bye World,
    origin: Array [
      Array [
        context.js,
        5,
      ],
    ],
  },
  msghello: Object {
    context: hello,
    extractedComments: Array [],
    id: msg,
    message: Hello World,
    origin: Array [
      Array [
        context.js,
        3,
      ],
    ],
  },
  msghello: Object {
    extractedComments: Array [],
    id: msghello,
    message: Hello World,
    origin: Array [
      Array [
        context.js,
        4,
      ],
    ],
  },
}
`;
